--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdk 33
+    buildToolsVersion = "33.0.2"
     defaultConfig {
         applicationId "br.com.tudoesom"
-        minSdkVersion 17
-        targetSdkVersion 26
-        versionCode 10
-        versionName "1.10.00"
+        minSdk 21
+        targetSdk 33
+        versionCode 16
+        versionName "1.11.02"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -28,16 +28,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-   compile 'me.dm7.barcodescanner:zxing:1.9.8'
-    compile 'com.google.zxing:core:3.2.1'
-    compile 'com.intuit.sdp:sdp-android:1.0.4'
-    compile 'com.intuit.ssp:ssp-android:1.0.4'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.intuit.sdp:sdp-android:1.0.4'
+    implementation 'com.intuit.ssp:ssp-android:1.0.4'
     // https://mvnrepository.com/artifact/com.google.zxing/core
    // compile group: 'com.google.zxing', name: 'core', version: '3.3.0'
 
